@@ -1,6 +1,6 @@
-February 11, 2000
+February  8, 2001
 
-This is V2.1.6 of SExtractor.
+This is V2.2.1 of SExtractor.
 SExtractor stands for ``Source Extractor'': a software for making
 catalog of sources from astronomical images.
 
