@@ -1,4 +1,4 @@
-This software is Copyrighted (C) E.BERTIN 1994-2000
+This software is Copyrighted (C) E.BERTIN 1994-2001
 It is freely distributable.
 If you make any change to this program, please indicate it clearly
 in the source and rename the executable to something else.
