@@ -9,7 +9,7 @@
 *
 *	Contents:	Keywords for the configuration file.
 *
-*	Last modify:	12/11/99
+*	Last modify:	14/10/2000
 *
 *%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 */
@@ -39,7 +39,7 @@ pkeystruct key[] =
    "MIN", "MAX", ""}},
   {"ASSOCSELEC_TYPE", P_KEY, &prefs.assocselec_type, 0,0, 0.0,0.0,
    {"ALL","MATCHED","-MATCHED",""}},
-  {"BACK_FILTERSIZE", P_INTLIST, prefs.backfsize, 1,7, 0.0,0.0,
+  {"BACK_FILTERSIZE", P_INTLIST, prefs.backfsize, 1,11, 0.0,0.0,
     {""}, 1,2, &prefs.nbackfsize},
   {"BACK_FILTTHRESH", P_FLOAT, &prefs.backfthresh, 0,0, 0.0,BIG},
   {"BACKPHOTO_THICK", P_INT, &prefs.pback_size, 1, 256},
